# fixed_gcode

./: Cargo.toml  README.md
.github/workflows/: crlf.yml  rust-nostd.yml  rust.yml
src/: lib.rs  parser.rs
src/tests/: line.rs  mod.rs  value.rs  word.rs
