[package]
name = "fixed_gcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = { version = "1.24.0", default-features = false }
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }

[features]
default = ["std"]
std = ["nom/std", "fixed/std"]
